Hard-code classification number used in cube.
This removes a for loop which had a massive effect on speed.