@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'application'
 
 mainClassName = "com.company.Main"
-applicationDefaultJvmArgs = ["-Xmx2G"]
+applicationDefaultJvmArgs = ["-Xmx3G","-Xms3G","-server", "-XX:CompileThreshold=10", "-XX:+AggressiveOpts"]
 
 task wrapper(type: Wrapper) {
     gradleVersion = '1.10'
@@ -18,8 +18,4 @@ repositories {
 dependencies {
   testCompile 'com.carrotsearch:junit-benchmarks:0.7.2'
   testCompile 'junit:junit:4.11'
-}
-
-run {
-    args "a"
 }
